[gd_scene load_steps=9 format=3 uid="uid://dnv8a75jfrnfi"]

[ext_resource type="Script" uid="uid://2ct1ohu3al83" path="res://Scripts/main.gd" id="1_vmo8a"]
[ext_resource type="Texture2D" uid="uid://b0cb3wppakx0o" path="res://Sprites/Backround.png" id="2_w5vkw"]
[ext_resource type="StyleBox" uid="uid://xa1nuradrcey" path="res://Sprites/sidebutton_Hoveer.tres" id="3_vqsfn"]
[ext_resource type="StyleBox" uid="uid://b2yy0fwst5hmo" path="res://Sprites/sidebutton.tres" id="4_d6i5r"]
[ext_resource type="Texture2D" uid="uid://bvwsee86u61qi" path="res://Sprites/Levels/Level_7.png" id="5_vmo8a"]
[ext_resource type="PackedScene" uid="uid://cxwq7vb40u4de" path="res://Scenes/BaseCastle.tscn" id="6_dcghp"]
[ext_resource type="FontFile" uid="uid://41snuhix40co" path="res://Sprites/Godot-Fontpack-d244bf6170b399a6d4d26a0d906058ddf2dafdf1/fonts/xolonium/xolonium-fonts-4.1/ttf/Xolonium-Bold.ttf" id="7_3ffo1"]
[ext_resource type="StyleBox" uid="uid://cys8n4e65i5m1" path="res://Sprites/SidePanel.tres" id="8_h0evp"]

[node name="Main" type="Node2D"]
script = ExtResource("1_vmo8a")

[node name="TextureRect2" type="TextureRect" parent="."]
z_index = -2
offset_right = 1152.0
offset_bottom = 648.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource("2_w5vkw")
stretch_mode = 1

[node name="QuitButton" type="Button" parent="."]
offset_left = 45.0
offset_top = 44.0
offset_right = 103.0
offset_bottom = 82.0
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_font_sizes/font_size = 21
theme_override_styles/hover = ExtResource("3_vqsfn")
theme_override_styles/pressed = ExtResource("4_d6i5r")
theme_override_styles/normal = ExtResource("4_d6i5r")
text = "Quit"
text_overrun_behavior = 4
icon_alignment = 1

[node name="Map" type="Sprite2D" parent="."]
z_index = -1
position = Vector2(568, 296)
scale = Vector2(2.21094, 2.06836)
texture = ExtResource("5_vmo8a")

[node name="Player" parent="." instance=ExtResource("6_dcghp")]
position = Vector2(510, 151)

[node name="Enemy" parent="." instance=ExtResource("6_dcghp")]
position = Vector2(644, 371)
castle_owner = "Enemy"

[node name="Neutral3" parent="." instance=ExtResource("6_dcghp")]
position = Vector2(569, 482)

[node name="Neutral5" parent="." instance=ExtResource("6_dcghp")]
position = Vector2(589, 243)

[node name="Neutral6" parent="." instance=ExtResource("6_dcghp")]
position = Vector2(511, 322)

[node name="Stats" type="Label" parent="."]
offset_left = 33.0
offset_top = 126.0
offset_right = 266.0
offset_bottom = 521.0
theme_override_colors/font_color = Color(0.65098, 0.486275, 0, 1)
theme_override_constants/line_spacing = 20
theme_override_fonts/font = ExtResource("7_3ffo1")
theme_override_font_sizes/font_size = 19
theme_override_styles/normal = ExtResource("8_h0evp")
text = "Tmp 23
Tmp32
Tmo34"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SpeedButton" type="Button" parent="."]
offset_left = 136.0
offset_top = 25.0
offset_right = 244.0
offset_bottom = 56.0
theme_override_styles/hover = ExtResource("3_vqsfn")
theme_override_styles/pressed = ExtResource("4_d6i5r")
theme_override_styles/normal = ExtResource("4_d6i5r")
text = "SpeedButton"

[node name="PauseButton" type="Button" parent="."]
offset_left = 137.0
offset_top = 70.0
offset_right = 245.0
offset_bottom = 101.0
theme_override_styles/hover = ExtResource("3_vqsfn")
theme_override_styles/pressed = ExtResource("4_d6i5r")
theme_override_styles/normal = ExtResource("4_d6i5r")
text = "PauseButton"
metadata/_edit_use_anchors_ = true

[connection signal="pressed" from="QuitButton" to="." method="_on_button_pressed"]
